Change folder name from notebooks to data_analysis and change filepaths

--- a/paper/01_rankings.ipynb
+++ b/paper/01_rankings.ipynb
@@ -118,7 +118,7 @@
     "resultpath = f'{RUN_ID}_Results' \n",
     "parent_dir = pathlib.Path(os.getcwd()).parent\n",
     "cm_nitrophenol = cutisplit.NitrophenolAbsorbanceModel.load(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_cm_nitrophenol.json\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_cm_nitrophenol.json\"\n",
     ")\n",
     "calibr8.plot_model(cm_nitrophenol)\n",
     "\n",
@@ -191,11 +191,11 @@
    "outputs": [],
    "source": [
     "idata2 = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_{variant}_round2.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_{variant}_round2.nc\"\n",
     ")\n",
     "#Replace BZACW9 by BZP1XQ for alternative PE-H analysis\n",
     "idata1 = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\BZACW9_Results\\BZACW9_{variant}_round1.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\BZACW9_Results\\BZACW9_{variant}_round1.nc\"\n",
     ")"
    ]
   },
