--- a/paper/02_BioLector-vs.Bioreactor.ipynb
+++ b/paper/02_BioLector-vs.Bioreactor.ipynb
@@ -117,16 +117,16 @@
    "outputs": [],
    "source": [
     "idata_all =  arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_BioLector+Fermentation(LipALipBYoaW).nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_BioLector+Fermentation(LipALipBYoaW).nc\"\n",
     ")\n",
     "idata1 = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\BZACW9_Results\\BZACW9_LCC_round1.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\BZACW9_Results\\BZACW9_LCC_round1.nc\"\n",
     ")\n",
     "idata2 = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\C3C1XZ_Results\\C3C1XZ_LCC_round2.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\C3C1XZ_Results\\C3C1XZ_LCC_round2.nc\"\n",
     ")\n",
     "idata_ferm = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_LipAvsLipBvsYoaW.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_LipAvsLipBvsYoaW.nc\"\n",
     ")"
    ]
   },
