--- a/paper/03_Linear_vs._non-linear.ipynb
+++ b/paper/03_Linear_vs._non-linear.ipynb
@@ -106,7 +106,7 @@
     "resultpath = f'{RUN_ID}_Results' \n",
     "parent_dir = pathlib.Path(os.getcwd()).parent\n",
     "cm_nitrophenol = cutisplit.NitrophenolAbsorbanceModel.load(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_cm_nitrophenol.json\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_cm_nitrophenol.json\"\n",
     ")\n",
     "calibr8.plot_model(cm_nitrophenol)\n",
     "\n",
@@ -129,10 +129,10 @@
    "outputs": [],
    "source": [
     "idata_linear = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_result_linear-comparison.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_result_linear-comparison.nc\"\n",
     ")\n",
     "idata_nonlinear = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_LCC_round1.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_LCC_round1.nc\"\n",
     ")"
    ]
   },
