--- a/paper/05_Analysis-AssayEffect.ipynb
+++ b/paper/05_Analysis-AssayEffect.ipynb
@@ -115,10 +115,10 @@
    "outputs": [],
    "source": [
     "idata_before =  arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\C4PZHQ_Results\\C4PZHQ_PE-H_round2.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\C4PZHQ_Results\\C4PZHQ_PE-H_round2.nc\"\n",
     ")\n",
     "idata_after = arviz.from_netcdf(\n",
-    "    rf\"{parent_dir}\\notebooks\\{resultpath}\\{RUN_ID}_assay-effect.nc\"\n",
+    "    rf\"{parent_dir}\\data_analysis\\{resultpath}\\{RUN_ID}_assay-effect.nc\"\n",
     ")"
    ]
   },
