Change to pymc and delete obsolete imports

--- a/data_analysis/01_PETase_CalibrationModel.ipynb
+++ b/data_analysis/01_PETase_CalibrationModel.ipynb
@@ -45,35 +45,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pymc 4.0.0b2\n",
       "calibr8 6.2.0\n"
      ]
     }
    ],
    "source": [
-    "import arviz\n",
-    "import ipywidgets\n",
-    "from matplotlib import cm, pyplot\n",
-    "import numpy\n",
-    "import os\n",
-    "import pandas\n",
-    "import pathlib\n",
-    "import string\n",
-    "try:\n",
-    "    import pymc as pymc3\n",
-    "except: \n",
-    "    import pymc3\n",
-    "\n",
-    "import bletl\n",
     "import calibr8\n",
-    "import cutisplit\n",
-    "import retl\n",
-    "import robotools\n",
+    "from matplotlib import pyplot\n",
+    "import os\n",
+    "import string\n",
     "\n",
+    "\n",
+    "import cutisplit\n",
     "import run_analysis\n",
     "\n",
     "\n",
-    "print(f\"pymc {pymc3.__version__}\")\n",
     "print(f\"calibr8 {calibr8.__version__}\")"
    ]
   },
@@ -85,7 +71,7 @@
    "outputs": [],
    "source": [
     "DCS_EXPERIMENT = 'TiGr_PETase_Screening'\n",
-    "RUN_ID = \"BWNZ99\"\n",
+    "RUN_ID = \"BZACW9\"\n",
     "analyser = run_analysis.CutisplitAnalysis(DCS_EXPERIMENT, RUN_ID)\n",
     "resultpath = f'{RUN_ID}_Results' \n",
     "if not os.path.isdir(resultpath):\n",
