--- a/paper/02_BioLector-vs.Bioreactor.ipynb
+++ b/paper/02_BioLector-vs.Bioreactor.ipynb
@@ -44,7 +44,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pymc 4.0.0b2\n",
       "calibr8 6.5.2\n"
      ]
     }
@@ -52,22 +51,15 @@
    "source": [
     "import arviz\n",
     "import calibr8\n",
-    "from matplotlib import cm, pyplot\n",
+    "from matplotlib import pyplot\n",
     "import numpy\n",
     "import os\n",
     "import pathlib\n",
     "import string\n",
-    "try:\n",
-    "    import pymc as pymc3\n",
-    "except:\n",
-    "    import pymc3\n",
-    "\n",
-    "import cutisplit\n",
     "\n",
     "import run_analysis\n",
     "\n",
     "\n",
-    "print(f\"pymc {pymc3.__version__}\")\n",
     "print(f\"calibr8 {calibr8.__version__}\")"
    ]
   },
