--- a/paper/01_rankings.ipynb
+++ b/paper/01_rankings.ipynb
@@ -36,18 +36,12 @@
    "source": [
     "import arviz\n",
     "import calibr8\n",
-    "from matplotlib import cm, pyplot\n",
+    "from matplotlib import pyplot\n",
     "import numpy\n",
     "import os\n",
-    "import pandas\n",
     "import pathlib\n",
     "import pyrff\n",
     "import string\n",
-    "\n",
-    "try:\n",
-    "    import pymc3\n",
-    "except:\n",
-    "    import pymc as pymc3\n",
     "\n",
     "import cutisplit\n",
     "import run_analysis"
@@ -65,14 +59,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cutisplit : 0.2.0\n",
-      "pymc      : 4.0.0b2\n",
       "arviz     : 0.11.4\n",
-      "numpy     : 1.20.3\n",
       "matplotlib: 3.5.0\n",
       "pyrff     : 2.0.1\n",
+      "cutisplit : 0.2.0\n",
       "pandas    : 1.3.4\n",
+      "pymc      : 4.0.0b2\n",
       "calibr8   : 6.5.2\n",
+      "numpy     : 1.20.3\n",
       "\n"
      ]
     }
