--- a/paper/05_Analysis-AssayEffect.ipynb
+++ b/paper/05_Analysis-AssayEffect.ipynb
@@ -39,36 +39,17 @@
      "text": [
       "WARNING (aesara.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pymc 4.0.0b2\n",
-      "calibr8 6.5.2\n"
-     ]
     }
    ],
    "source": [
     "import arviz\n",
-    "import calibr8\n",
-    "from matplotlib import cm, pyplot\n",
+    "from matplotlib import pyplot\n",
     "import numpy\n",
     "import os\n",
     "import pathlib\n",
     "import string\n",
-    "try:\n",
-    "    import pymc as pymc3\n",
-    "except:\n",
-    "    import pymc3\n",
     "\n",
-    "import cutisplit\n",
-    "\n",
-    "import run_analysis\n",
-    "\n",
-    "\n",
-    "print(f\"pymc {pymc3.__version__}\")\n",
-    "print(f\"calibr8 {calibr8.__version__}\")"
+    "import run_analysis"
    ]
   },
   {
